src/objects/CE_Award__c.object
<CustomObject>
    <fields>
        <fullName>CE_Activity__c</fullName>
        <label>Activity</label>
        <referenceTo>CE_Activity__c</referenceTo>
        <relationshipLabel>Awards</relationshipLabel>
        <relationshipName>Awards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Place__c</fullName>
        <label>Place</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Award</label>
    <nameField>
        <displayFormat>Award-{000000000}</displayFormat>
        <label>Award Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Awards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>